manifests/envoy-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  creationTimestamp: null
  name: funk-ingress
data:
  envoy.yaml: |-
    admin:
      access_log_path: "/dev/null"
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8001
    stats_flush_interval:
      seconds: 5
    stats_sinks:
    - name: envoy.statsd
      config:
        address:
          socket_address:
            address: 127.0.0.1
            port_value: 9125
            protocol: UDP
    static_resources:
      listeners:
      - address:
          socket_address:
            address: 0.0.0.0
            port_value: 8080
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              codec_type: auto
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: backend
                  domains:
                  - "*"
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster_header: X-FUNK-HOST
                  - match:
                      prefix: "/pageviews-per-hour"
                    route:
                      cluster: pageviews-per-hour
                  - match:
                      prefix: "/pageviews-per-day"
                    route:
                      cluster: pageviews-per-day
                  - match:
                      prefix: "/simple-micro"
                    route:
                      cluster: simple-micro
                  - match:
                      prefix: "/um-shop"
                    route:
                      cluster: um-shop
              http_filters:
              - name: envoy.router
                config: {}
      clusters:
      - name: pageviews-per-hour
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        hosts:
        - socket_address:
            address: pageviews-per-hour
            port_value: 80
      - name: pageviews-per-day
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        hosts:
        - socket_address:
            address: pageviews-per-day
            port_value: 80
      - name: simple-micro
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        hosts:
        - socket_address:
            address: simple-micro
            port_value: 80
      - name: um-shop
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        hosts:
        - socket_address:
            address: um-shop
            port_value: 80
