manifests/secret-api.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    heritage: huv
    app: huv-secret-api
  name: huv-secret-api
spec:
  selector:
    matchLabels:
      app: huv-secret-api 
  template:
    metadata:
      labels:
        app: huv-secret-api
      name: huv-secret-api
    spec:
      containers:
        - name: secret-api
          image: usermirror/config-api
          env:
            - name: CONFIG_API_STORAGE_BACKEND
              value: etcd
            - name: CONFIG_API_ETCD_ADDR
              value: secret-api-etcd-cluster-client:2379
          ports:
            - name: secret-api
              containerPort: 8888
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /internal/health
              port: 8888
          readinessProbe:
            httpGet:
              path: /internal/health
              port: 8888
