manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    funk-component: ingress
  name: funk-ingress
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - name: ingress
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: mgmt
      port: 8001
      protocol: TCP
    - name: statsd
      port: 9102
      protocol: TCP
  selector:
    funk-component: ingress
